option('frontend', type : 'combo', choices : ['terminal', 'sdl'], value : 'terminal')
option('disable-log', type : 'boolean', value : false)
option('disable-option', type : 'boolean', value : false)
option('disable-hiscore', type : 'boolean', value : false)
option('disable-replay', type : 'boolean', value : false)
